refactor: Replaced RiotStep with StepFactoryBean